# CheckinBot

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.build.yaml  compose.example.yaml
.github/workflows/: main.yml
src/: main.rs
