[package]
name = "checkin_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["full"] }
clokwerk = "0.4.0"
dotenv = "0.15.0"
log = "0.4"
simplelog = "^0.12.0"
regex = "1.10"
rand = "0.8.5"